fixed scroll on small screen

--- a/src/index.css
+++ b/src/index.css
@@ -367,7 +367,7 @@
 }
 @media (max-width: 450px) {
   .middle-body{
-    height: 140px;
+    height: 132px;
   }
   
 }
